--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.12/js/all.js"
     integrity="sha384-Voup2lBiiyZYkRto2XWqbzxHXwzcm4A5RfdfG6466bu5LqjwwrjXCMBQBLMWh7qR" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="shortcut icon" type="image/png" href="img/js.png"/>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark" id="title">
