--- a/src/public/index.html
+++ b/src/public/index.html
@@ -64,6 +64,9 @@
     </div>
 
     <div class="container" id="contentWrap">
+      <audio id="chatAudio">
+        <source src="sound/notification.mp3" type="audio/mpeg">
+      </audio>
       <div class="row">
         <div class="col-md-6 offset-md-1 mt-4">
           <div class="card">
@@ -106,6 +109,7 @@
     crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
     <script src="/js/typing.js" charset="utf-8"></script>
+    <script src="/js/ion.sound.min.js" charset="utf-8"></script>
     <script src="/js/main.js" charset="utf-8"></script>
   </body>
 </html>
